    - Various changes and improvements.

  Version 2.2.1(March 3rd, 2022)
    - Make it possible to customize fusion dark theme by saving theme options in a config file.
    - Add ability to show in the UI available media subtitles and to download them or embed them in downloaded file.
    - Add an option to auto save not downloaded media on exit.

 Version 2.3.0(May 1st, 2022)
    - Add lux backend. Project page is at: https://github.com/iawia002/lux
    - Update language translations.
    - Add a checkbox in batch downloader tab to make it easy to enable/disable monitoring of clipboard for Url.

 Version 2.4.0(July 1st, 2022)
    - Add svtplay-dl extension. Project page is at: https://github.com/spaam/svtplay-dl
    - Add you-get extension. Project page is at: https://github.com/soimort/you-get
    - Add Italian translations.

  Version 2.5.0(August 1st, 2022)
    [Windows]
    - Bundle python 3.8.10.
    - Replace bundled 7zip with bsdtar.
    [All]
    - Add Swedish language.
    - Update other langauge translations.
    - Add a button in the configure tab to make it easy to reach a folder where binaries are located.
    - Automatically download and manage folder based you-get executable.

  Version 2.6.0(October 1st, 2022)
    [Windows]
    - Bundle wget 1.21.3.
    [All]
    - Add GUI options in playlist downloader tab to enable/disable internal archive file and to clear it.
    - Fix a bug that prevented downloading of urls from a file if the file use "\r\n" as line separator.
    - Add ability to have multiple profiles for downloading options.

  Version 2.7.0(Novermber 10th, 2022)
    [All]
    - Add German translations.
    - Add a GUI option to check for Media Downloader update on startup.
    - Add a GUI option to download a section of a media in batch downloader tab.
    - Update other langauge translations.

  Version 2.8.0(Unreleased)
    [All]
    - Download all missing executables on startup if they are not present for some reason.